<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:onClick="onLayoutClick"
                                             android:background="@drawable/bg_gradient"
                                             tools:context="com.deucate.kartik.billmk.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/avalable_balance"
            android:textColor="#FFF"/>

        <TextView
            android:id="@+id/mainCurrentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="--/--"
            android:textColor="#FFF"
            android:textSize="78sp"
            tools:ignore="HardcodedText"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:background="#00FFFFFF"
        android:contentDescription="AddImage"
        android:onClick="onMoneyAdd"
        android:scaleType="centerInside"
        android:src="@drawable/moneybox"
        android:tint="#FFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_money"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton2"
        app:layout_constraintRight_toRightOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:background="#00FFFFFF"
        android:contentDescription="SpentImage"
        android:onClick="onMoneySpent"
        android:scaleType="centerInside"
        android:src="@drawable/moneyspent"
        android:tint="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/spent_money"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="93dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="93dp"
        android:layout_marginStart="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton2"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="#60FFFFFF"
            android:onClick="onClickAdded"
            android:padding="5dp"
            android:text="@string/added"
            android:textColor="#FFF"
            tools:ignore="ButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="#60FFFFFF"
            android:onClick="onClickSpented"
            android:padding="5dp"
            android:text="@string/spented"
            android:textColor="#FFF"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <Button
        android:id="@+id/mainOverViewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Over View"
        android:background="#45FFFFFF"
        android:textColor="#FFF"
        app:layout_constraintRight_toLeftOf="@+id/imageButton"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintLeft_toRightOf="@+id/imageButton2"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"/>

    <Button
        android:id="@+id/mainLogout"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="LO"
        android:onClick="onlogout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
